2006-09-15  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Reverse changeset 205 (doc-comment exclusion) from Tom Regner 
          <t.regner at librics.de>. 

2006-08-29  Hans Rakers <hans at parse dot nl>

        * Skip disk cache creation and clean/clear actions when operating in
          shm_only mode. This fixes ticket #165

2006-08-23  Hans Rakers <hans at parse dot nl>

        * Fixes for tickets #157 and #164

2006-08-06  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix stupid bug (#159)
        * Handle returning null instead of array (#156)

2006-08-03  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * zend_do_inheritance can't be called with TSRMLS_CC when using 
          php 4, this also means that eAccelerator won't work with threading!
        * ea_info and ea_dasm: if eaccelerator_mm_instance is NULL, just return
          null and don't do something.

2006-07-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed detection of SysV IPC shared memory and made anonymous mmap 
          the first selected type. This makes the behaviour of rc1 the 
          default. anonymous mmap doens't have the problem of shmmax. SysVIPC is 
          still available!

2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed project files for win32 and made the debug version build again.

2006-07-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix restoring of opcode handler for php 5.0.5 when files are loaded
          from disk cache. This fixes bug #147
        * Some update in the release notes for the upcoming rc1
        * Fix loader.c too so we don't get any linking errors. 

2006-07-24  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Make clean routine support dir hashing. Again, this should be tested
          on win32!
        * Use a define for the magic string in the eAccelerator file headers
        * Bump up version to 0.9.5-rc1