@@ -45,6 +45,10 @@
 #   define ZEND_ENGINE_2_1
 #endif
 
+#if PHP_MAJOR_VERSION == 5 && PHP_MINOR_VERSION >= 2
+#   define ZEND_ENGINE_2_2
+#endif
+
 /* fixes compile errors on php5.1 */
 #ifdef STR_EMPTY_ALLOC
 #define empty_string STR_EMPTY_ALLOC()
@@ -377,6 +381,14 @@ typedef union align_union {
   int (*func)(int);
   long l;
 } align_union;
+
+#ifdef ZEND_ENGINE_2_2
+typedef union _align_test {
+  void *ptr;
+  double dbl;
+  long lng;
+} align_test;
+#endif
 
 /******************************************************************************/
 
